tests/errors/raise_value_error.py
# expect: caught value error
try:
    raise ValueError("bad value")
except ValueError:
    print("caught value error")
